# waybar_custom_modules

./: .gitignore  README.md  pyproject.toml  requirements.txt
waybar_custom_modules/: battery.py  cli.py  linux.py  powerprofile.py
