[build-system]
requires            = ["setuptools>=61.0"]
build-backend       = "setuptools.build_meta"

[project]
name                = "waybar_custom_modules"
dynamic             = ["readme", "version", "dependencies"]
authors             = [{ name = "Ferdinand Bachmann", email = "ferdinand.bachmann@yrlf.at" }]
description         = "custom modules for waybar"
requires-python     = ">=3.5"
classifiers         = [
    "Programming Language :: Python :: 3",
]

[project.scripts]
"evd-lemon"         = "waybar_custom_modules.cli:main"

[project.urls]
"Homepage"          = "https://github.com/Ferdi265/waybar_custom_modules"
"Bug Tracker"       = "https://github.com/Ferdi265/waybar_custom_modules/issues"

[tool.setuptools.dynamic]
version             = { attr = "waybar_custom_modules.__version__" }
readme              = { file = ["README.md"], content-type = "text/markdown" }
dependencies        = { file = ["requirements.txt"] }
